--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
